fix overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
   * {
     @apply font-["Poppins"] box-border;
   }
+  html,
   body {
     @apply overflow-x-hidden bg-[#f0f1f6];
   }
